# dojoflow

./: alembic.ini  compose.yml  pyproject.toml
devtools/factories/: onboarding.py
devtools/seeds/: onboarding.py
migrations/: env.py
migrations/versions/: 12c8ce06bd65_add_responsible_id_to_student_.py  50af6d17cbd8_create_responsible_table.py  a1b2c3d4e5f6_create_student_responsible.py  b2c3d4e5f6a7_add_email_to_student_and_responsible.py  c182012c86cd_create_address_table_and_add_address_to_.py  c24f905e5067_create_initial_tables.py  c2978a738c67_remove_responsible_data_from_student_.py  e0f4b8a5d1c2_create_modality_catalog.py  f41b8c2d9a10_add_phone_is_whatsapp_to_student.py
src/dojoflow/: main.py
src/dojoflow/api/: exception_handlers.py
src/dojoflow/commands/: telegram_set_webhook.py
src/dojoflow/core/: settings.py
src/dojoflow/database/: base.py  helper_mapped_columns.py  session.py  transaction.py
src/dojoflow/models/: __init__.py  academy.py  academy_modality.py  address.py  audit_log.py  base_model.py  enrollment.py  import_batch.py  import_row.py  master.py  modality.py  notification.py  payment.py  payment_allocation.py  payment_transaction.py  responsible.py  student.py  student_responsible.py  (+2 more)
tests/: conftest.py  test_health.py
tests/api/: test_master_context.py  test_onboarding.py  test_telegram_student_creation_e2e.py  test_telegram_students_menu.py  test_telegram_webhook.py
tests/helpers/: onboarding.py
tests/services/: test_student_service.py  test_telegram_conversation_state.py  test_telegram_students_handler.py
(+79 files in other folders)
